Added to third container, need to work on contrast class and css

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,12 @@ code {
 .LineEffect::after {
   margin: 0 0 0 20px;
 }
+
+.box-header{
+  padding-top: 1rem;
+}
+
+.contrast{
+  background-color: White; 
+  color: #404040
+}
