--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,25 @@ code {
   background: linear-gradient(to right, #304352, #d7d2cc); 
   color: whitesmoke
 }
+
+.parent-background > div{
+  background: transparent!important;
+}
+.active-form-field :hover{
+  box-shadow: 0 0 0 2px #22be34 inset!important;
+  color: #2ecc40!important;
+}
+
+.sidebar-link::before{
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: rgba(34,36,38,.1);
+}
+
+.menu > a {
+  text-decoration: none
+}
